# loom

./: .gitignore  AGENTS.md  CONTEXT.md  handoff.md  justfile
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/bindings/: AppConfig.ts  CreateSessionRequest.ts  GitLabMergeRequest.ts  JiraIssue.ts  ModelDefinition.ts  Session.ts  SessionListResponse.ts  SessionState.ts  SourceType.ts
backend/migrations/: 20240101000000_initial.sql  20240102000000_add_opencode_session_id.sql  20240103000000_add_model.sql  20240104000000_add_custom_instructions.sql  20240105000000_remove_projects.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs  routes.rs  state.rs
backend/src/routes/: gitlab.rs  health.rs  jira.rs  mod.rs  sessions.rs
backend/src/services/: gitlab.rs  jira.rs  mod.rs  opencode.rs  opencode_config.rs  orchestration.rs  prompt.rs  session.rs
docs/: audit-2026-04-22.md
docs/adr/: 0001-tech-stack.md  0002-opencode-integration.md
docs/prd/: 0001-scaffolding.md  0002-core-features.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/lib/: utils.ts
frontend/src/lib/api/: client.ts  config.ts  gitlab.ts  jira.ts  sessions.ts
frontend/src/lib/components/: Layout.svelte  NewSessionDialog.svelte  SessionCard.svelte  SourceSearch.svelte  StateBadge.svelte
frontend/src/lib/pages/: Dashboard.svelte  SessionDetail.svelte  Settings.svelte
frontend/src/lib/stores/: navigation.svelte.ts
